Solve layout problems with search module on mobile

--- a/templates/cassiopeia/scss/blocks/_banner.scss
+++ b/templates/cassiopeia/scss/blocks/_banner.scss
@@ -37,5 +37,9 @@
         }
       }
     }
+
+    @media screen and (max-height: 740px) {
+      height: 100vh;
+    }
   }
 }
